[package]
name = "assessment-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"

[dependencies]
axum = { version = "0.6.18", features = ["http2", "headers", "macros", "tracing"] }
axum-macros = "0.3.7"
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.2.7", features = ["derive", "env"] }
geojson = { version = "0.24.0", features = ["geo-types"] }
mongodb = "2.5.0"
serde = { version = "1.0.162", features = ["derive"] }
serde-aux = "4.2.0"
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
